<resources>
    <string name="app_name">Gakumas Localify</string>
    <string name="gakumas_localify">Gakumas Localify</string>
    <string name="enable_plugin">Enable Plugin (Not Hot Reloadable)</string>
    <string name="replace_font">Replace Font</string>
    <string name="lazy_init">Fast Initialization (Lazy loading)</string>
    <string name="enable_free_camera">Enable Free Camera</string>
    <string name="start_game">Start Game / Hot Reload Config</string>
    <string name="setFpsTitle">Max FPS (0 is Use Original Settings)</string>
    <string name="unlockAllLive">Unlock All Live</string>
    <string name="liveUseCustomeDress">Live Custom Character</string>
    <string name="live_costume_head_id">Live Custom Head ID (eg. costume_head_hski-cstm-0002)</string>
    <string name="live_custome_dress_id">Live Custom Dress ID (eg. hski-cstm-0002)</string>
    <string name="useCustomeGraphicSettings">Use Custom Graphics Settings</string>
    <string name="renderscale">RenderScale (0.5/0.59/0.67/0.77/1.0)</string>
    <string name="text_hook_test_mode">Text Hook Test Mode</string>
    <string name="export_text">Export Text</string>
    <string name="force_export_resource">Force Update Resource</string>
    <string name="max_high">Ultra</string>
    <string name="very_high">Very High</string>
    <string name="hign">High</string>
    <string name="middle">Mid</string>
    <string name="low">Low</string>
    <string name="orientation_orig">Original</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_lock">Orientation Lock</string>
    <string name="enable_breast_param">Enable Breast Param</string>
    <string name="damping">Damping</string>
    <string name="stiffness">Stiffness</string>
    <string name="spring">Spring</string>
    <string name="pendulum">Pendulum</string>
    <string name="pendulumrange">Pendulum Range</string>
    <string name="average">Average</string>
    <string name="rootweight">Root Weight</string>
    <string name="uselimit_0_1">Limit Range Multiplier (0 is Unlimited)</string>
    <string name="usearmcorrection">Use Arm Correction</string>
    <string name="isdirty">IsDirty</string>
    <string name="usescale">Use Breast Scale</string>
    <string name="breast_scale">Breast Scale</string>
    <string name="uselimitmultiplier">Use Limit Multiplier</string>
    <string name="axisx_x">axisX.x</string>
    <string name="axisy_x">axisY.x</string>
    <string name="axisz_x">axisZ.x</string>
    <string name="axisx_y">axisX.y</string>
    <string name="axisy_y">axisY.y</string>
    <string name="axisz_y">axisZ.y</string>
    <string name="basic_settings">Basic Ssettings</string>
    <string name="graphic_settings">Graphic Settings</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="test_mode_live">Test Mode - LIVE</string>
    <string name="debug_settings">Debug Settings</string>
    <string name="breast_param">Breast Parameters</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="advanced_settings">Advanced</string>
    <string name="about_warn_title">WARNING</string>
    <string name="about_warn_p1">This plugin is for learning and communication only.</string>
    <string name="about_warn_p2">Using external plugin against the relevant TOS so proceed at your own risk.</string>
    <string name="about_about_title">About This Plugin</string>
    <string name="about_about_p1">This plugin is completely free. If you paid for this plugin, please report the seller.</string>
    <string name="about_about_p2">Plugin QQ group: 975854705</string>
    <string name="project_contribution">Project Contribution</string>
    <string name="plugin_code">Plugin Code</string>
    <string name="contributors">Contributors</string>
    <string name="translation_repository">Translation Repository</string>
    <string name="resource_settings">Resource Settings</string>
    <string name="check_built_in_resource">Check Built-in Assets Update</string>
    <string name="delete_plugin_resource">Delete Plugin Resource</string>
    <string name="use_remote_zip_resource">Use Remote ZIP Resource</string>
    <string name="resource_url">Resource URL</string>
    <string name="download">Download</string>
    <string name="invalid_zip_file">Invalid file</string>
    <string name="invalid_zip_file_warn">This file is not a valid ZIP translation resource pack.</string>
    <string name="cancel">Cancel</string>
    <string name="downloaded_resource_version">Downloaded Version</string>
    <string name="del_remote_after_update">Delete Cache File After Update</string>

    <string name="about_contributors_asset_file">about_contributors_en.json</string>
</resources>